Añadir url de vercel para el cors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,7 +40,7 @@ jwt.expiration-ms=${JWT_EXPIRATION:86400000}
 # ========================================
 # Permitir frontend de desarrollo local y producción en Vercel
 # En Railway, sobreescribir con variable de entorno CORS_ORIGINS
-app.cors.allowed-origins=${CORS_ORIGINS:http://localhost:5173,http://localhost:3000,http://localhost:4173}
+app.cors.allowed-origins=${CORS_ORIGINS:http://localhost:5173,http://localhost:3000,http://localhost:4173,https://beautybookingweb.vercel.app}
 
 # ========================================
 # SERVIDOR
