Modificacion de application-railway.propierties en datasource para desplegar correctamente

--- a/src/main/resources/application-railway.properties
+++ b/src/main/resources/application-railway.properties
@@ -12,10 +12,12 @@
 # - JDBC_DATABASE_URL
 # - JDBC_DATABASE_USERNAME
 # - JDBC_DATABASE_PASSWORD
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+# Soporta tanto SPRING_DATASOURCE_* como JDBC_*
+spring.datasource.url=${SPRING_DATASOURCE_URL:${JDBC_DATABASE_URL:}}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${JDBC_DATABASE_USERNAME:}}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${JDBC_DATABASE_PASSWORD:}}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 # ========================================
 # CONNECTION POOL - HIKARICP
