Config profile dev para application.propierties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.application.name=beautybooking
 # dev: H2 en memoria para desarrollo local rápido
 # railway: MySQL en Railway para producción
 # Railway detectará automáticamente 'railway' si defines SPRING_PROFILES_ACTIVE=railway
-spring.profiles.active=${SPRING_PROFILES_ACTIVE:railway}
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
 # ========================================
 # FLYWAY - MIGRACIONES DE BASE DE DATOS
